--- a/404.html
+++ b/404.html
@@ -30,7 +30,7 @@
     </header>
     <!-- Menus -->
     <div class="menu_content">
-        <div class="top">
+        <div class="top text-center">
             <div class="container">
                 <ul class="nav_links">
                     <li class="nav_items"><a href="index.html">Home</a></li>
@@ -43,15 +43,17 @@
         </div>
         <div class="bottom">
             <div class="container">
-                <ul class="social_links">
-                    <li><a href="#"><i class="fab fa-behance"></i></a></li>
-                    <li><a href="#"><i class="fab fa-dribbble"></i></a></li>
-                    <li><a href="#"><i class="fab fa-github"></i></a></li>
-                    <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                    <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                </ul>
+                <div>
+                    <ul class="social_links">
+                        <li><a href="#"><i class="fab fa-behance"></i></a></li>
+                        <li><a href="#"><i class="fab fa-dribbble"></i></a></li>
+                        <li><a href="#"><i class="fab fa-github"></i></a></li>
+                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                        <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                        <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                    </ul>
+                </div>
                 <div class="c_rights">
                     <h5>&copy; 2020 - Zakirsoft</h5>
                 </div>
