--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
     </header>
     <!-- Menus -->
     <div class="menu_content">
-        <div class="top">
+        <div class="top text-center">
             <div class="container">
                 <ul class="nav_links">
                     <li class="nav_items"><a href="index.html">Home</a></li>
@@ -42,15 +42,17 @@
         </div>
         <div class="bottom">
             <div class="container">
-                <ul class="social_links">
-                    <li><a href="#"><i class="fab fa-behance"></i></a></li>
-                    <li><a href="#"><i class="fab fa-dribbble"></i></a></li>
-                    <li><a href="#"><i class="fab fa-github"></i></a></li>
-                    <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                    <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                </ul>
+                <div>
+                    <ul class="social_links">
+                        <li><a href="#"><i class="fab fa-behance"></i></a></li>
+                        <li><a href="#"><i class="fab fa-dribbble"></i></a></li>
+                        <li><a href="#"><i class="fab fa-github"></i></a></li>
+                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                        <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                        <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                    </ul>
+                </div>
                 <div class="c_rights">
                     <h5>&copy; 2020 - Zakirsoft</h5>
                 </div>
@@ -77,8 +79,10 @@
                             <div class="about_contect_img_1 ">
                                 <img src="assets/images/about/about3.png" alt="img" class=" img-fluid">
                             </div>
-                            <div class="play-video">
-                                <a href="#"><span><i class="fab fa-youtube"></i> Play Video</span></a>
+                            <div class="play_video">
+                                <a href="#">
+                                    <span class="play_icon"><img src="assets/images/icon.png" alt="icon"> Play Video</span>
+                                </a>
                             </div>
                         </div>
                         <div class="col-8">
@@ -135,13 +139,13 @@
     <section id="team" class="none">
         <div class="container">
             <div class="row section_title">
-                <h2>About us</h2>
+                <h2>Our Team</h2>
             </div>
             <div class="row team_content">
                 <div class="col-md-6">
                     <div class="team_card text-center">
                         <div class="members_img">
-                            <img src="assets/images/team/Team-1.png" alt="team-members" class="img-fluid">
+                            <img src="assets/images/team/1.png" alt="team-members" class="img-fluid">
                         </div>
                         <div class="member_position">
                             <h3 class="name">Jerry Vargas</h3>
@@ -152,7 +156,7 @@
                 <div class="col-md-6">
                     <div class="team_card text-center">
                         <div class="members_img">
-                            <img src="assets/images/team/Team-2.png" alt="team-members" class="img-fluid">
+                            <img src="assets/images/team/2.png" alt="team-members" class="img-fluid">
                         </div>
                         <div class="member_position">
                             <h3 class="name">Jerry vargas</h3>
@@ -163,7 +167,7 @@
                 <div class="col-md-6">
                     <div class="team_card text-center">
                         <div class="members_img">
-                            <img src="assets/images/team/Team-3.png" alt="team-members" class="img-fluid">
+                            <img src="assets/images/team/3.png" alt="team-members" class="img-fluid">
                         </div>
                         <div class="member_position">
                             <h3 class="name">Jerry vargas</h3>
@@ -174,7 +178,7 @@
                 <div class="col-md-6">
                     <div class="team_card text-center">
                         <div class="members_img">
-                            <img src="assets/images/team/Team-4.png" alt="team-members" class="img-fluid">
+                            <img src="assets/images/team/4.png" alt="team-members" class="img-fluid">
                         </div>
                         <div class="member_position">
                             <h3 class="name">Jerry vargas</h3>
@@ -185,7 +189,7 @@
                 <div class="col-md-6">
                     <div class="team_card text-center">
                         <div class="members_img">
-                            <img src="assets/images/team/Team-5.png" alt="team-members" class="img-fluid">
+                            <img src="assets/images/team/5.png" alt="team-members" class="img-fluid">
                         </div>
                         <div class="member_position">
                             <h3 class="name">Jerry vargas</h3>
@@ -196,7 +200,7 @@
                 <div class="col-md-6">
                     <div class="team_card text-center">
                         <div class="members_img">
-                            <img src="assets/images/team/Team-6.png" alt="team-members" class="img-fluid">
+                            <img src="assets/images/team/6.png" alt="team-members" class="img-fluid">
                         </div>
                         <div class="member_position">
                             <h3 class="name">Jerry vargas</h3>
@@ -207,7 +211,7 @@
                 <div class="col-md-6">
                     <div class="team_card text-center">
                         <div class="members_img">
-                            <img src="assets/images/team/Team-7.png" alt="team-members" class="img-fluid">
+                            <img src="assets/images/team/7.png" alt="team-members" class="img-fluid">
                         </div>
                         <div class="member_position">
                             <h3 class="name">Jerry vargas</h3>
@@ -218,7 +222,7 @@
                 <div class="col-md-6">
                     <div class="team_card text-center">
                         <div class="members_img">
-                            <img src="assets/images/team/Team-8.png" alt="team-members" class="img-fluid">
+                            <img src="assets/images/team/8.png" alt="team-members" class="img-fluid">
                         </div>
                         <div class="member_position">
                             <h3 class="name">Jerry vargas</h3>
@@ -231,14 +235,49 @@
     </section>
     <!-- Team section end -->
 
-    <!-- ?? section start -->
-    <!-- ?? section end -->
-
-    <!-- ?? section start -->
-    <!-- ?? section end -->
-
-    <!-- ?? section start -->
-    <!-- ?? section end -->
+    <!-- footer section start -->
+    <footer id="footer_area" class="none">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="footer_menu">
+                        <span>Quick Link</span>
+                        <ul class="nav_links">
+                            <li class="nav_items"><a href="index.html">Home</a></li>
+                            <li class="nav_items"><a href="about.html">About</a></li>
+                            <li class="nav_items"><a href="work.html">work</a></li>
+                            <li class="nav_items"><a href="#">Career</a></li>
+                            <li class="nav_items"><a href="join-us.html">Contact</a></li>
+                        </ul>
+                    </div>
+                    <div class="connect_info">
+                        <h4>Connect With us</h4>
+                        <p>In consequat, quam id sodales hendrerit, eros mi molestie leo, nec lacinia risus neque
+                            tristique augue. Proin tempus urna vel congue elementum.
+                        </p>
+                        <span class="email">Zakirsoft@outlook.com</span>
+                    </div>
+                    <div>
+                        <ul class="social_links">
+                            <li><a href="#"><i class="fab fa-behance"></i></a></li>
+                            <li><a href="#"><i class="fab fa-dribbble"></i></a></li>
+                            <li><a href="#"><i class="fab fa-github"></i></a></li>
+                            <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                            <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-12">
+                    <div class="copyright_text">
+                        <p>&#169; 2020 - Zakirsoft</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- footer section end -->
 
     <!-- all js goes here -->
     <script src="assets/js/jquery-3.3.1.slim.min.js"></script>
