--- a/join-us-contact.html
+++ b/join-us-contact.html
@@ -30,7 +30,7 @@
     </header>
     <!-- Menus -->
     <div class="menu_content">
-        <div class="top">
+        <div class="top text-center">
             <div class="container">
                 <ul class="nav_links">
                     <li class="nav_items"><a href="index.html">Home</a></li>
@@ -43,15 +43,17 @@
         </div>
         <div class="bottom">
             <div class="container">
-                <ul class="social_links">
-                    <li><a href="#"><i class="fab fa-behance"></i></a></li>
-                    <li><a href="#"><i class="fab fa-dribbble"></i></a></li>
-                    <li><a href="#"><i class="fab fa-github"></i></a></li>
-                    <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                    <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                </ul>
+                <div>
+                    <ul class="social_links">
+                        <li><a href="#"><i class="fab fa-behance"></i></a></li>
+                        <li><a href="#"><i class="fab fa-dribbble"></i></a></li>
+                        <li><a href="#"><i class="fab fa-github"></i></a></li>
+                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                        <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                        <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                    </ul>
+                </div>
                 <div class="c_rights">
                     <h5>&copy; 2020 - Zakirsoft</h5>
                 </div>
@@ -59,12 +61,16 @@
         </div>
     </div>
     <!-- header section end -->
+
     <!-- joinus section start -->
-    <section id="joinus-contact-area" class="none">
+    <section id="joinus-contact_area" class="none">
         <div class="container">
+            <div class="row section_title">
+                <h2>Join us</h2>
+            </div>
             <div class="row">
                 <div class="col-12">
-                    <div class="contact-form">
+                    <div class="contact_form text-center">
                         <form>
                             <div class="form-row">
                                 <div class="col">
@@ -77,26 +83,34 @@
                             </div>
                             <div class="form-row">
                                 <div class="col">
-                                    <input type="text" class="form-control" placeholder="First name">
+                                    <input type="text" class="form-control" placeholder="What do you want from us?">
                                 </div>
                                 <div class="col">
-                                    <input type="text" class="form-control" placeholder="Last name">
+                                    <input type="text" class="form-control" placeholder="Your experience level">
                                 </div>
                             </div>
-                            <textarea name="" id="" cols="30" rows="10"></textarea>
-                            <button type="submit">SEND MESSAGE</button>
+                            <textarea name="" id="" cols="30" rows="10" placeholder="Tell me something about you."></textarea>
+                            <button class="button" type="submit">SEND MESSAGE <i class="fab fa-telegram-plane"></i></button>
                         </form>
-                    </div>
-                </div>
-                <div class="col-12">
-                    <div class="copyright-text">
-                        <p>&#169; 2020 - Zakirsoft</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
     <!-- joinus section end -->
+
+            <!-- footer section start -->
+            <div class="footer_c_right text-center mb-30 none">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="copyright_text">
+                                <p>&#169; 2020 - Zakirsoft</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
     <!-- all js goes here -->
     <script src="assets/js/jquery-3.3.1.slim.min.js"></script>
