--- a/work.html
+++ b/work.html
@@ -29,7 +29,7 @@
     </header>
     <!-- Menus -->
     <div class="menu_content">
-        <div class="top">
+        <div class="top text-center">
             <div class="container">
                 <ul class="nav_links">
                     <li class="nav_items"><a href="index.html">Home</a></li>
@@ -42,15 +42,17 @@
         </div>
         <div class="bottom">
             <div class="container">
-                <ul class="social_links">
-                    <li><a href="#"><i class="fab fa-behance"></i></a></li>
-                    <li><a href="#"><i class="fab fa-dribbble"></i></a></li>
-                    <li><a href="#"><i class="fab fa-github"></i></a></li>
-                    <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                    <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                </ul>
+                <div>
+                    <ul class="social_links">
+                        <li><a href="#"><i class="fab fa-behance"></i></a></li>
+                        <li><a href="#"><i class="fab fa-dribbble"></i></a></li>
+                        <li><a href="#"><i class="fab fa-github"></i></a></li>
+                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                        <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                        <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                    </ul>
+                </div>
                 <div class="c_rights">
                     <h5>&copy; 2020 - Zakirsoft</h5>
                 </div>
@@ -68,7 +70,7 @@
             </div>
             <div class="work_content">
                 <div class="container">
-                    <div class="row border-bottom">
+                    <div class="row border-bottom align-items-center">
                         <div class="col-md-6">
                             <div class="tab-text">
                                 <p>These all our team member recent work</p>
@@ -462,11 +464,49 @@
     </section>
     <!-- work section end -->
 
-    <!-- ?? section start -->
-    <!-- ?? section end -->
-
-    <!-- ?? section start -->
-    <!-- ?? section end -->
+    <!-- footer section start -->
+    <footer id="footer_area" class="none">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="footer_menu">
+                        <span>Quick Link</span>
+                        <ul class="nav_links">
+                            <li class="nav_items"><a href="index.html">Home</a></li>
+                            <li class="nav_items"><a href="about.html">About</a></li>
+                            <li class="nav_items"><a href="work.html">work</a></li>
+                            <li class="nav_items"><a href="#">Career</a></li>
+                            <li class="nav_items"><a href="join-us.html">Contact</a></li>
+                        </ul>
+                    </div>
+                    <div class="connect_info">
+                        <h4>Connect With us</h4>
+                        <p>In consequat, quam id sodales hendrerit, eros mi molestie leo, nec lacinia risus neque
+                            tristique augue. Proin tempus urna vel congue elementum.
+                        </p>
+                        <span class="email">Zakirsoft@outlook.com</span>
+                    </div>
+                    <div>
+                        <ul class="social_links">
+                            <li><a href="#"><i class="fab fa-behance"></i></a></li>
+                            <li><a href="#"><i class="fab fa-dribbble"></i></a></li>
+                            <li><a href="#"><i class="fab fa-github"></i></a></li>
+                            <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                            <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-12">
+                    <div class="copyright_text">
+                        <p>&#169; 2020 - Zakirsoft</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- footer section end -->
 
     <!-- all js goes here -->
     <script src="assets/js/jquery-3.3.1.slim.min.js"></script>
