--- a/work.html
+++ b/work.html
@@ -16,7 +16,7 @@
         <div class="container">
             <nav class="head_content">
                 <div class="logo">
-                    <a href="index.html"><img src="assets/images/logo/1.png" alt="logo"></a>
+                    <a href="index.html"><img src="assets/images/logo/1.png" alt="logo" class=" img-fluid"></a>
                 </div>
                 <div class="menu">
                     <ul class="m_bar">
