--- a/index.html
+++ b/index.html
@@ -363,6 +363,9 @@
               
           </div>
         </div>
+        <div class="qoute_img">
+            <img src="assets/images/qoute.png" alt="qoute">
+        </div>
     </section>
     <!-- testimonial section end -->
 
