--- a/contact.html
+++ b/contact.html
@@ -108,7 +108,7 @@
         </div>
     </div>
 
-    <div class="footer_c_right text-center mb-30">
+    <div class="footer_c_right text-center none mb-30">
         <div class="container">
             <div class="row">
                 <div class="col-12">
