--- a/contact.html
+++ b/contact.html
@@ -92,7 +92,7 @@
     </section>
     <!-- joinus section end -->
 
-    <div class="bottom text-center">
+    <div class="bottom text-center none">
         <div class="container">
             <div>
                 <ul class="social_links">
@@ -108,7 +108,7 @@
         </div>
     </div>
 
-    <div class="footer_c_right text-center none mb-30">
+    <div class="footer_c_right text-center mb-30 none">
         <div class="container">
             <div class="row">
                 <div class="col-12">
