footer page marign padding fix

--- a/404.html
+++ b/404.html
@@ -87,10 +87,12 @@
                                 <li><a href="#"><i class="fab fa-instagram"></i></a></li>
                                 <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
                             </ul>
-                            <div class="c_rights">
-                                <h5>&copy; 2020 - Zakirsoft</h5>
-                            </div>
                         </div>
+                    </div>
+                </div>
+                <div class="col-12">
+                    <div class="copyright_text">
+                        <p>&#169; 2020 - Zakirsoft</p>
                     </div>
                 </div>
             </div>
