--- a/about.html
+++ b/about.html
@@ -127,7 +127,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="about_content_2_img">
-                        <img src="assets/images/about/office.png" alt="office images">
+                        <img src="assets/images/about/office.png" alt="office images" class="img-fluid">
                     </div>
                 </div>
             </div>
@@ -241,7 +241,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="footer_menu">
-                        <span>Quick Link</span>
+                        <span>Quick Links</span>
                         <ul class="nav_links">
                             <li class="nav_items"><a href="index.html">Home</a></li>
                             <li class="nav_items"><a href="about.html">About</a></li>
@@ -251,7 +251,7 @@
                         </ul>
                     </div>
                     <div class="connect_info">
-                        <h4>Connect With us</h4>
+                        <h4>Get in touch</h4>
                         <p>In consequat, quam id sodales hendrerit, eros mi molestie leo, nec lacinia risus neque
                             tristique augue. Proin tempus urna vel congue elementum.
                         </p>
