--- a/join-us-contact.html
+++ b/join-us-contact.html
@@ -100,7 +100,7 @@
     <!-- joinus section end -->
 
             <!-- footer section start -->
-            <div class="footer_c_right text-center mb-30 none">
+            <div class="footer_c_right text-center none">
                 <div class="container">
                     <div class="row">
                         <div class="col-12">
