--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
         <div class="container">
             <nav class="head_content">
                 <div class="logo">
-                    <a href="index.html"><img src="assets/images/logo/1.png" alt="logo" class=" img-fluid"></a>
+                    <a href="index.html">
+                        Zakir <span>Soft</span>
+                    </a>
                 </div>
                 <div class="menu">
                     <ul class="m_bar">
