margin paddding fix work,about page

--- a/work.html
+++ b/work.html
@@ -70,7 +70,7 @@
             </div>
             <div class="work_content">
                 <div class="container">
-                    <div class="row border-bottom align-items-center">
+                    <div class="row border-bottom align-items-center mb-50">
                         <div class="col-md-6">
                             <div class="tab-text">
                                 <p>These all our team member recent work</p>
@@ -104,7 +104,7 @@
                     <div class="tab-content pt-5" id="pills-tabContent">
                         <div class="tab-pane fade show active" id="pills-all" role="tabpanel"
                             aria-labelledby="pills-all-tab">
-                            <div class="row align-items-center mb-30">
+                            <div class="row align-items-center mb-100">
                                 <div class="col-4">
                                     <div class="project_info">
                                         <span class="p_type">Project Type</span>
@@ -121,7 +121,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="row align-items-center mb-30">
+                            <div class="row align-items-center mb-100">
                                 <div class="col-4">
                                     <div class="project_info">
                                         <span class="p_type">Project Type</span>
@@ -138,7 +138,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="row align-items-center mb-30">
+                            <div class="row align-items-center mb-100">
                                 <div class="col-4">
                                     <div class="project_info">
                                         <span class="p_type">Project Type</span>
@@ -155,7 +155,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="row align-items-center mb-30">
+                            <div class="row align-items-center mb-100">
                                 <div class="col-4">
                                     <div class="project_info">
                                         <span class="p_type">Project Type</span>
@@ -172,7 +172,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="row align-items-center mb-30">
+                            <div class="row align-items-center">
                                 <div class="col-4">
                                     <div class="project_info">
                                         <span class="p_type">Project Type</span>
@@ -192,7 +192,7 @@
                         </div>
                         <div class="tab-pane fade" id="pills-frontend" role="tabpanel"
                             aria-labelledby="pills-frontend-tab">
-                            <div class="row align-items-center mb-30">
+                            <div class="row align-items-center mb-100">
                                 <div class="col-4">
                                     <div class="project_info">
                                         <span class="p_type">Project Type</span>
@@ -209,7 +209,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="row align-items-center mb-30">
+                            <div class="row align-items-center mb-100">
                                 <div class="col-4">
                                     <div class="project_info">
                                         <span class="p_type">Project Type</span>
@@ -226,7 +226,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="row align-items-center mb-30">
+                            <div class="row align-items-center mb-100">
                                 <div class="col-4">
                                     <div class="project_info">
                                         <span class="p_type">Project Type</span>
@@ -243,7 +243,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="row align-items-center mb-30">
+                            <div class="row align-items-center mb-100">
                                 <div class="col-4">
                                     <div class="project_info">
                                         <span class="p_type">Project Type</span>
@@ -260,7 +260,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="row align-items-center mb-30">
+                            <div class="row align-items-center">
                                 <div class="col-4">
                                     <div class="project_info">
                                         <span class="p_type">Project Type</span>
@@ -281,7 +281,7 @@
                         <div class="tab-pane fade" id="pills-backend" role="tabpanel"
                             aria-labelledby="pills-backend-tab">
 
-                            <div class="row align-items-center mb-30">
+                            <div class="row align-items-center mb-100">
                                 <div class="col-4">
                                     <div class="project_info">
                                         <span class="p_type">Project Type</span>
@@ -298,7 +298,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="row align-items-center mb-30">
+                            <div class="row align-items-center mb-100">
                                 <div class="col-4">
                                     <div class="project_info">
                                         <span class="p_type">Project Type</span>
@@ -315,7 +315,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="row align-items-center mb-30">
+                            <div class="row align-items-center mb-100">
                                 <div class="col-4">
                                     <div class="project_info">
                                         <span class="p_type">Project Type</span>
@@ -332,7 +332,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="row align-items-center mb-30">
+                            <div class="row align-items-center mb-100">
                                 <div class="col-4">
                                     <div class="project_info">
                                         <span class="p_type">Project Type</span>
@@ -349,7 +349,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="row align-items-center mb-30">
+                            <div class="row align-items-center">
                                 <div class="col-4">
                                     <div class="project_info">
                                         <span class="p_type">Project Type</span>
@@ -370,7 +370,7 @@
                         </div>
                         <div class="tab-pane fade" id="pills-ui" role="tabpanel" aria-labelledby="pills-ui-tab">
 
-                            <div class="row align-items-center mb-30">
+                            <div class="row align-items-center mb-100">
                                 <div class="col-4">
                                     <div class="project_info">
                                         <span class="p_type">Project Type</span>
@@ -387,7 +387,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="row align-items-center mb-30">
+                            <div class="row align-items-center mb-100">
                                 <div class="col-4">
                                     <div class="project_info">
                                         <span class="p_type">Project Type</span>
@@ -404,7 +404,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="row align-items-center mb-30">
+                            <div class="row align-items-center mb-100">
                                 <div class="col-4">
                                     <div class="project_info">
                                         <span class="p_type">Project Type</span>
@@ -421,7 +421,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="row align-items-center mb-30">
+                            <div class="row align-items-center mb-100">
                                 <div class="col-4">
                                     <div class="project_info">
                                         <span class="p_type">Project Type</span>
@@ -438,7 +438,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="row align-items-center mb-30">
+                            <div class="row align-items-center">
                                 <div class="col-4">
                                     <div class="project_info">
                                         <span class="p_type">Project Type</span>
