--- a/about.html
+++ b/about.html
@@ -159,8 +159,8 @@
                             <img src="assets/images/team/2.png" alt="team-members" class="img-fluid">
                         </div>
                         <div class="member_position">
-                            <h3 class="name">Jerry vargas</h3>
-                            <span class="position">CEO & Developer</span>
+                            <h3 class="name">Keanu Mendez</h3>
+                            <span class="position">Senior Frontend Developer</span>
                         </div>
                     </div>
                 </div>
@@ -170,8 +170,8 @@
                             <img src="assets/images/team/3.png" alt="team-members" class="img-fluid">
                         </div>
                         <div class="member_position">
-                            <h3 class="name">Jerry vargas</h3>
-                            <span class="position">CEO & Developer</span>
+                            <h3 class="name">Tom Evans</h3>
+                            <span class="position">Senior Backend Developer</span>
                         </div>
                     </div>
                 </div>
@@ -181,8 +181,8 @@
                             <img src="assets/images/team/4.png" alt="team-members" class="img-fluid">
                         </div>
                         <div class="member_position">
-                            <h3 class="name">Jerry vargas</h3>
-                            <span class="position">CEO & Developer</span>
+                            <h3 class="name">Ronald Nelson</h3>
+                            <span class="position">Fronted Developer</span>
                         </div>
                     </div>
                 </div>
@@ -192,8 +192,8 @@
                             <img src="assets/images/team/5.png" alt="team-members" class="img-fluid">
                         </div>
                         <div class="member_position">
-                            <h3 class="name">Jerry vargas</h3>
-                            <span class="position">CEO & Developer</span>
+                            <h3 class="name">Aaron James</h3>
+                            <span class="position">Back end Developer</span>
                         </div>
                     </div>
                 </div>
@@ -203,8 +203,8 @@
                             <img src="assets/images/team/6.png" alt="team-members" class="img-fluid">
                         </div>
                         <div class="member_position">
-                            <h3 class="name">Jerry vargas</h3>
-                            <span class="position">CEO & Developer</span>
+                            <h3 class="name">Alex Lee</h3>
+                            <span class="position">Web Designer (UI/UX)</span>
                         </div>
                     </div>
                 </div>
@@ -214,8 +214,8 @@
                             <img src="assets/images/team/7.png" alt="team-members" class="img-fluid">
                         </div>
                         <div class="member_position">
-                            <h3 class="name">Jerry vargas</h3>
-                            <span class="position">CEO & Developer</span>
+                            <h3 class="name">Anthony Carrol</h3>
+                            <span class="position">Android</span>
                         </div>
                     </div>
                 </div>
@@ -225,8 +225,8 @@
                             <img src="assets/images/team/8.png" alt="team-members" class="img-fluid">
                         </div>
                         <div class="member_position">
-                            <h3 class="name">Jerry vargas</h3>
-                            <span class="position">CEO & Developer</span>
+                            <h3 class="name">Chris Elliot</h3>
+                            <span class="position">Senior Motion Designer</span>
                         </div>
                     </div>
                 </div>
