change files & id name from work & create new scss files

--- a/index.html
+++ b/index.html
@@ -13,21 +13,19 @@
   <body>
     <!-- header section start -->
     <header>
-        <div class="container">
-            <nav class="head_content">
-                <div class="logo">
-                    <a href="index.html">
-                        Zakir <span>Soft</span>
-                    </a>
-                </div>
-                <div class="menu">
-                    <ul class="m_bar">
-                        <li></li>
-                        <li></li>
-                    </ul>
-                </div>
-            </nav>
-        </div>
+      <div class="container">
+        <nav class="head_content">
+          <div class="logo">
+            <a href="index.html"> Zakir <span>Soft</span> </a>
+          </div>
+          <div class="menu">
+            <ul class="m_bar">
+              <li></li>
+              <li></li>
+            </ul>
+          </div>
+        </nav>
+      </div>
     </header>
     <!-- Menus -->
     <div class="menu_content">
@@ -105,7 +103,7 @@
     <!-- banner section end -->
 
     <!-- work section start -->
-    <section id="work" class="none">
+    <section id="Project" class="none">
       <div class="container-fluid">
         <div class="row section_title">
           <h2>our Work</h2>
