header fullscreen menu design upgraded

--- a/index.html
+++ b/index.html
@@ -30,50 +30,44 @@
         </div>
     </header>
     <!-- Menus -->
-    <div class="menu_content">
-      <div class="top text-center">
-        <div class="container">
-          <ul class="nav_links">
-            <li class="nav_items"><a href="index.html">Home</a></li>
-            <li class="nav_items"><a href="about.html">About</a></li>
-            <li class="nav_items"><a href="work.html">work</a></li>
-            <li class="nav_items"><a href="career.html">Career</a></li>
-            <li class="nav_items"><a href="contact.html">Contact</a></li>
-          </ul>
+    <div class="fullscreen-menu">
+        <div class="menu-body">
+            <div class="container">
+              <div class="menu-container">
+                  <div class="menu-close">
+                    <ul class="close-bar">
+                      <li></li>
+                      <li></li>
+                    </ul>
+                  </div>
+                  <div class="main-menu">
+                    <ul>
+                      <li> <a href="#"> <span>01</span> Home </a> </li>
+                      <li> <a href="#"> <span>02</span> About </a> </li>
+                      <li> <a href="#"> <span>03</span> Work </a> </li>
+                      <li> <a href="#"> <span>04</span> Career </a> </li>
+                      <li> <a href="#"> <span>05</span> Contact </a> </li>
+                    </ul>
+                  </div>
+                </div>
+            </div>
         </div>
-      </div>
-      <div class="bottom">
-        <div class="container">
-          <div>
-            <ul class="social_links">
-              <li>
-                <a href="#"><i class="fab fa-behance"></i></a>
-              </li>
-              <li>
-                <a href="#"><i class="fab fa-dribbble"></i></a>
-              </li>
-              <li>
-                <a href="#"><i class="fab fa-github"></i></a>
-              </li>
-              <li>
-                <a href="#"><i class="fab fa-facebook-f"></i></a>
-              </li>
-              <li>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-              </li>
-              <li>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-              </li>
-              <li>
-                <a href="#"><i class="fab fa-linkedin-in"></i></a>
-              </li>
+        <div class="menu-footer">
+          <div class="container">
+            <ul class="footer-social">
+              <li><a href="#"> <i class="fab fa-behance"></i> </a></li>
+              <li><a href="#"> <i class="fab fa-dribbble"></i> </a></li>
+              <li><a href="#"> <i class="fab fa-github"></i> </a></li>
+              <li><a href="#"> <i  class="fab fa-facebook-f"></i> </a></li>
+              <li><a href="#"> <i class="fab fa-twitter"></i> </a></li>
+              <li><a href="#"> <i class="fab fa-instagram"></i> </a></li>
+              <li><a href="#"> <i  class="fab fa-linkedin-in"></i> </a></li>
             </ul>
-          </div>
-          <div class="c_rights">
-            <h5>&copy; 2020 - Zakirsoft</h5>
+            <div class="copyright-text">
+              <p> &copy; 2020 - Zakirsoft </h5>
+            </div>
           </div>
         </div>
-      </div>
     </div>
     <!-- header section end -->
 
@@ -523,6 +517,15 @@
       </div>
     </footer>
     <!-- footer section end -->
+
+    
+    <ul>
+      <li> <a href="#">Home</a> </li>
+      <li> <a href="#">About</a> </li>
+      <li> <a href="#">Work</a> </li>
+      <li> <a href="#">Career</a> </li>
+      <li> <a href="#">Contact</a> </li>
+    </ul>
 
     <!-- all js goes here -->
     <script src="assets/js/jquery-3.3.1.slim.min.js"></script>
