--- a/about.html
+++ b/about.html
@@ -82,8 +82,10 @@
         <div class="row section_title">
           <h2>About us</h2>
         </div>
-        <div class="row about_content align-items-center">
-          <div class="col-md-6">
+        <div
+          class="row about_content align-items-center justify-content-center"
+        >
+          <div class="col-lg-6">
             <div class="row">
               <div class="col-12">
                 <div class="about_content_img">
@@ -122,7 +124,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6">
+          <div class="col-lg-6">
             <div class="about_content_wrapper">
               <h3>Who We are</h3>
               <p>
