header social links style updated

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                   <div class="main-menu">
                     <ul>
                       <li> <a href="#"> <span>01</span> Home </a> </li>
-                      <li> <a href="#"> <span>02</span> About </a> </li>
+                      <li> <a href="#" class="active"> <span>02</span> About </a> </li>
                       <li> <a href="#"> <span>03</span> Work </a> </li>
                       <li> <a href="#"> <span>04</span> Career </a> </li>
                       <li> <a href="#"> <span>05</span> Contact </a> </li>
