--- a/about.html
+++ b/about.html
@@ -146,7 +146,7 @@
     <section id="about_content_2" class="none">
       <div class="container">
         <div class="row align-items-center">
-          <div class="col-md-6">
+          <div class="col-lg-6 order-lg-0 order-2">
             <div class="office_content_wrapper">
               <h3>About zakirsoft</h3>
               <p>
@@ -158,7 +158,7 @@
               <a href="#" class="button">Join Our Team</a>
             </div>
           </div>
-          <div class="col-md-6 r_space">
+          <div class="col-lg-6 order-lg-0 order-1 r_space">
             <div class="about_content_2_img">
               <img
                 src="assets/images/about/office.png"
