--- a/join-us-contact.html
+++ b/join-us-contact.html
@@ -15,49 +15,57 @@
     <!-- header section start -->
     <header>
         <div class="container">
-            <nav class="head_content">
-                <div class="logo">
-                    <a href="index.html"><img src="assets/images/logo/1.png" alt="logo" class=" img-fluid"></a>
-                </div>
-                <div class="menu">
-                    <ul class="m_bar">
-                        <li></li>
-                        <li></li>
-                    </ul>
-                </div>
-            </nav>
+          <nav class="head_content">
+            <div class="logo">
+              <a href="index.html"> Zakir <span>Soft</span> </a>
+            </div>
+            <div class="menu">
+              <ul class="m_bar">
+                <li></li>
+                <li></li>
+              </ul>
+            </div>
+          </nav>
         </div>
-    </header>
+      </header>
     <!-- Menus -->
-    <div class="menu_content">
-        <div class="top text-center">
+    <div class="fullscreen-menu">
+        <div class="menu-body">
             <div class="container">
-                <ul class="nav_links">
-                    <li class="nav_items"><a href="index.html">Home</a></li>
-                    <li class="nav_items"><a href="about.html">About</a></li>
-                    <li class="nav_items"><a href="work.html">work</a></li>
-                    <li class="nav_items"><a href="career.html">Career</a></li>
-                    <li class="nav_items"><a href="contact.html">Contact</a></li>
-                </ul>
+              <div class="menu-container">
+                  <div class="menu-close">
+                    <ul class="close-bar">
+                      <li></li>
+                      <li></li>
+                    </ul>
+                  </div>
+                  <div class="main-menu">
+                    <ul>
+                      <li> <a href="index.html"> <span>01</span> Home </a> </li>
+                      <li> <a href="about.html" class="active"> <span>02</span> About </a> </li>
+                      <li> <a href="work.html"> <span>03</span> Work </a> </li>
+                      <li> <a href="career.html"> <span>04</span> Career </a> </li>
+                      <li> <a href="contact.html"> <span>05</span> Contact </a> </li>
+                    </ul>
+                  </div>
+                </div>
             </div>
         </div>
-        <div class="bottom">
-            <div class="container">
-                <div>
-                    <ul class="social_links">
-                        <li><a href="#"><i class="fab fa-behance"></i></a></li>
-                        <li><a href="#"><i class="fab fa-dribbble"></i></a></li>
-                        <li><a href="#"><i class="fab fa-github"></i></a></li>
-                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                        <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                        <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                    </ul>
-                </div>
-                <div class="c_rights">
-                    <h5>&copy; 2020 - Zakirsoft</h5>
-                </div>
+        <div class="menu-footer">
+          <div class="container">
+            <ul class="footer-social">
+              <li><a href="#"> <i class="fab fa-behance"></i> </a></li>
+              <li><a href="#"> <i class="fab fa-dribbble"></i> </a></li>
+              <li><a href="#"> <i class="fab fa-github"></i> </a></li>
+              <li><a href="#"> <i  class="fab fa-facebook-f"></i> </a></li>
+              <li><a href="#"> <i class="fab fa-twitter"></i> </a></li>
+              <li><a href="#"> <i class="fab fa-instagram"></i> </a></li>
+              <li><a href="#"> <i  class="fab fa-linkedin-in"></i> </a></li>
+            </ul>
+            <div class="copyright-text">
+              <p> &copy; 2020 - Zakirsoft </h5>
             </div>
+          </div>
         </div>
     </div>
     <!-- header section end -->
